--- a/contacto (2).html
+++ b/contacto (2).html
@@ -159,4 +159,13 @@
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/materialize.min.js"></script>
 <script src="js/app.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142488730-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142488730-2');
+</script>
 </html>
